# models/coursemodel.js
@@ -1,27 +1,43 @@
 const mongoose = require("mongoose");
+const quizSchema = new mongoose.Schema({
+    title: { type: String, required: true },
+    description: { type: String, required: true },
+    options: [{ type: String, required: true }],
+    correctOption: { type: String, required: true },
+ 
+});
 
 const chapterSchema = new mongoose.Schema({
     media: { type: String, required: true },
     chapterTitle: { type: String, required: true },
     description: { type: String, required: true },
-    quiz: { type: [String], required: true }
-}, { _id: false });
+    quiz: {
+         _id: mongoose.Schema.Types.ObjectId,
+        type: [quizSchema], required: true }
+}); 
 
 const topicSchema = new mongoose.Schema({
-    topicTitle: { type: String,required: true },
-    numberOfChapters: { type: Number,required: true },
-    chapters: { type: [chapterSchema],  required: true      }
-}, { _id: false });
+    topicTitle: { type: String, required: true },
+    numberOfChapters: { type: Number, required: true },
+    chapters: {
+         _id: mongoose.Schema.Types.ObjectId,
+         type: [chapterSchema], required: true }
+});
+
 const courseSchema = new mongoose.Schema({
-    thumbnail: { type: String, },
-    courseName: { type: String,  },
-    language: { type: String,  },
-    whatLearn: { type: [String],  },
-    topics: { type: [topicSchema],  },
-    status: { type: String, enum: ["close", "live"], default: "live" },
-    tags: { type: [String], }
+    thumbnail: { type: String },
+    courseName: { type: String },
+    language: { type: String },
+    whatLearn: { type: [String] },
+    topics: {
+        _id: mongoose.Schema.Types.ObjectId,
+        type: [topicSchema] },
+    status: { 
+        type: String, 
+        enum: ["active", "close",], 
+        default: "active" 
+    },
+    tags: { type: [String] }
 }, { timestamps: true });
-
-
 
 module.exports = mongoose.model("Course", courseSchema);
