# routes/courseroute.js
@@ -1,18 +1,25 @@
 const express = require("express");
-const router = express.Router();       
+const router = express.Router();
 const {
-    createCourse,
-    getAllCourses,  
-    getCourseById,
-    updateCourse,
-    deleteCourse,
+  createCourse,
+  getAllCourses,
+  getCourseById,
+  updateCourse,
+  deleteCourse,
+  getAllQuizzesAgainstCourse,
+  updateQuiz,
+  deleteQuiz,
 } = require("../controllers/coursecontroller");
-    
 
-router.post("/", createCourse);
-router.get("/",getAllCourses);
-router.get("/:id", getCourseById);
-router.put("/:id", updateCourse);
-router.delete("/:id",deleteCourse);
+router.post("/createCourse", createCourse);
+router.get("/allCourses", getAllCourses);
+router.get("/getCourseByid/:id", getCourseById);
+router.put("/updateCourse", updateCourse);
+router.delete("/deleteCourse", deleteCourse);
+
+router.get("/getAllQuizzes/:id", getAllQuizzesAgainstCourse);
+
+router.put("updateQuiz", updateQuiz);
+router.delete("deleteQuiz", deleteQuiz);
 
 module.exports = router;
